[package]
name = "lets-dev-vc"
version = "0.1.0"
authors = ["Kizuru <fr.kizuru@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.9.0-rc.2", default-features = false, features = ["cache", "client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }